--- a/.classpath
+++ b/.classpath
@@ -5,8 +5,8 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="/home/denis/workspace_android/Beacron/libs/slf4j-android-1.5.8.jar"/>
-	<classpathentry kind="lib" path="/home/denis/workspace_android/Beacron/libs/osmdroid-android-4.2.jar"/>
-	<classpathentry kind="lib" path="/home/denis/workspace_android/Beacron/libs/osmdroid-android-4.2-javadoc.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/denis/workspace_android/Beacron/libs/slf4j-android-1.5.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/denis/workspace_android/Beacron/libs/osmdroid-android-4.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/denis/workspace_android/Beacron/libs/osmdroid-android-4.2-javadoc.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
